Add instructions to snake

--- a/index.html
+++ b/index.html
@@ -14,7 +14,33 @@
 	</head>
 	<body>
 
-    <figure class="snake-game"></figure>
+		<div class="content-main group">
+
+			<section class="content-text">
+
+				<h1>DOMino Snake</h1>
+
+				<p>Snake for two players, built using DOMino.js<p>
+
+				<p><em>Green Snake:</em><br/>controls with arrow keys<p>
+
+				<p><em>Pink Snake:</em><br/>controls with WASD<p>
+
+				<a class="portfolio-link" href="https://github.com/zdg2102/DOMino">
+          Check out DOMino.js on GitHub
+				</a>
+
+				<a class="portfolio-link" href="http://zdgarcia.com">
+          Check out my portfolio
+				</a>
+
+			</section>
+
+      <section class="content-game">
+				<figure class="snake-game"></figure>
+			</section>
+
+		</div>
 
 	</body>
 </html>
